# unitprep-api

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
core/: Cargo.toml
core/src/: csv_document.rs  in_memory_session_store.rs  in_memory_session_store_tests.rs  lib.rs  parsing.rs  parsing_tests.rs  session.rs  session_store.rs  uploaded_file.rs
core/src/parsing/: csv.rs  csv_tests.rs  dispatch_tests.rs  excel.rs  excel_tests.rs  mod.rs  spreadsheetml.rs
dedup/: Cargo.toml  RULES.md
dedup/src/: comparison.rs  grouping.rs  ingest.rs  lib.rs  normalization.rs  note_composer.rs  notes.rs  relatedness.rs  relatedness_tests.rs  report.rs  similarity.rs  types.rs
dedup/src/types/: fields.rs
dedup/tests/: reference_fixtures.rs
migrations/: 20260721192342_create_users.down.sql  20260721192342_create_users.up.sql  20260721193633_create_webauthn_credentials.up.sql  20260721194201_create_totp_credentials.down.sql  20260721194201_create_totp_credentials.up.sql  20260721194252_create_sessions.up.sql  20260721194425_create_user_invites.down.sql  20260721194425_create_user_invites.up.sql  20260721194643_create_auth_configuration.down.sql  20260721194643_create_auth_configuration.up.sql  20260721194830_create_auth_audit_logs.down.sql  20260721194830_create_auth_audit_logs.up.sql  20260721200546_enable_rls_users.down.sql  20260721200546_enable_rls_users.up.sql  20260721201822_enable_rls_webauthn_credentials.down.sql  20260721201822_enable_rls_webauthn_credentials.up.sql  20260721202053_enable_rls_totp_credentials.down.sql  20260721202053_enable_rls_totp_credentials.up.sql  20260721202617_enable_rls_sessions.down.sql  20260721202617_enable_rls_sessions.up.sql  20260721203828_enable_rls_user_invites.down.sql  20260721203828_enable_rls_user_invites.up.sql  20260721204542_enable_rls_auth_configuration.down.sql  20260721204542_enable_rls_auth_configuration.up.sql  20260721204636_enable_rls_auth_audit_logs.down.sql  20260721204636_enable_rls_auth_audit_logs.up.sql  20260721221312_fix_webauthn_credentials_storage.down.sql  20260721221312_fix_webauthn_credentials_storage.up.sql  20260723150000_move_auth_objects_to_auth_schema.down.sql  20260723150000_move_auth_objects_to_auth_schema.up.sql
scripts/: setup_app_service_role.sql
src/: db.rs  main.rs
src/ai/: interface.rs
src/api/: analyze.rs  analyze_tests.rs  cancel_session.rs  correct.rs  correct_tests.rs  dedup.rs  dedup_test_support.rs  dedup_tests.rs  dedup_view.rs  dedup_view_tests.rs  discover.rs  discover_tests.rs  exempt.rs  export.rs  export_tests.rs  mod.rs  resolve_unit_format.rs  resolve_unit_format_tests.rs  select_group_file.rs  select_unit_file.rs  select_unit_file_tests.rs  test_support.rs  upload.rs  validate.rs  validate_tests.rs
src/application/: dedup_session_service.rs  in_memory_session_store.rs  mod.rs  session_service.rs  session_service_tests.rs  session_store.rs  unit_group_session.rs  unit_group_session_tests.rs
src/auth/: authenticated_user.rs  mod.rs  session_cookie.rs  session_token.rs  webauthn_backend.rs
src/domain/: corrections.rs  csv_document.rs  mod.rs  models.rs  session.rs  uploaded_file.rs
src/domain/analysis/: batch.rs  mod.rs  reference.rs
src/domain/validation/: group_checks.rs  issues.rs  mod.rs  row_checks.rs  validation_tests.rs
src/infrastructure/: csv_export.rs  csv_safety.rs  dedup_csv_export.rs  dedup_csv_export_tests.rs  dedup_export_plan.rs  dedup_export_plan_tests.rs  dedup_xlsx_export.rs  dedup_xlsx_export_tests.rs  mod.rs
src/infrastructure/dedup_csv_export/: cell_refs.rs  cell_refs_tests.rs
src/infrastructure/dedup_export_plan/: cell_refs.rs  cell_refs_tests.rs
unit-group/: Cargo.toml
unit-group/src/: corrections.rs  format.rs  format_tests.rs  lib.rs  models.rs
unit-group/src/analysis/: batch.rs  fingerprint.rs  mod.rs  reference.rs
unit-group/src/validation/: issues.rs  mod.rs  row_checks.rs  validation_tests.rs
