[workspace]
members = ["core", "unit-group"]
# This root Cargo.toml is both the workspace manifest and the
# `unitprep` binary's own package manifest — the binary crate stays at
# the repo root (unchanged import paths, unchanged build command) while
# `core` and `unit-group` are separate library crates it will depend on
# as the migration proceeds. See project docs / CHANGELOG for the
# rationale (shared engine for session storage + ingestion, reused by
# every UnitPrep tool, versus each tool's own domain logic kept in its
# own crate).

[package]
name = "unitprep"
version = "1.0.0"
edition = "2021"

authors = ["Boris Maksimov <bmaksimov@quikstor.com>"]

description = "Web API for storage facility unit group analysis, net-new group identification, and QMS import preparation."

license = "MIT OR Apache-2.0"

repository = "https://github.com/quikstorboris/unitPrep.git"

[dependencies]

# Shared engine: file ingestion/parsing (and, soon, session storage).
unitprep-core = { path = "core" }

# Core error handling
anyhow = "1"

# CSV parsing
csv = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time support
chrono = { version = "0.4", features = ["clock"] }

# Similarity matching
strsim = "0.11"

# Web framework
axum = { version = "0.8", features = ["multipart"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Middleware
tower-http = { version = "0.6", features = ["cors"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Session IDs
uuid = { version = "1", features = ["v4"] }

# ZIP export generation
zip = "2"

# Analysis fingerprinting
regex = "1"
once_cell = "1"

# Excel support
calamine = "0.25"

# Excel 2003 SpreadsheetML (XML) support — some facility export tools
# label this format with a .xls extension even though it's neither real
# binary XLS nor OOXML XLSX, which calamine can't open.
quick-xml = "0.36"