[workspace]
members = ["core", "unit-group", "dedup"]
# This root Cargo.toml is both the workspace manifest and the
# `unitprep` binary's own package manifest — the binary crate stays at
# the repo root (unchanged import paths, unchanged build command) while
# `core` and `unit-group` are separate library crates it will depend on
# as the migration proceeds. See project docs / CHANGELOG for the
# rationale (shared engine for session storage + ingestion, reused by
# every UnitPrep tool, versus each tool's own domain logic kept in its
# own crate).

[package]
name = "unitprep"
version = "1.1.0"
edition = "2021"

authors = ["Boris Maksimov <bmaksimov@quikstor.com>"]

description = "Web API for storage facility unit group analysis, net-new group identification, and QMS import preparation."

license = "MIT OR Apache-2.0"

repository = "https://github.com/quikstorboris/unitPrep.git"

[dependencies]

# Shared engine: file ingestion/parsing (and, soon, session storage).
unitprep-core = { path = "core" }

# Duplicate-tenant-check domain logic (grouping/comparison/notes) — the
# binary owns only session/HTTP orchestration for this tool, same as
# UnitGroup's domain logic vs. its own orchestration here.
unitprep-dedup = { path = "dedup" }

# UnitGroup's own domain logic (discovery-result data, batch/fingerprint
# analysis, validation, corrections) — extracted out of src/domain/ into
# its own crate, same boundary as unitprep-dedup: this binary owns only
# session/HTTP orchestration for it.
unitprep-unit-group = { path = "unit-group" }

# Core error handling
anyhow = "1"

# CSV *writing* — infrastructure/csv_export.rs uses csv::Writer to build
# export output. Parsing/reading input CSVs lives entirely in
# unitprep-core now; this is a distinct, still-legitimate direct use.
csv = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time support
chrono = { version = "0.4", features = ["clock"] }

# Web framework
axum = { version = "0.8", features = ["multipart"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Middleware
tower-http = { version = "0.6", features = ["cors"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Session IDs
uuid = { version = "1", features = ["v4"] }

# ZIP export generation
zip = "2"

# XLSX export generation (dedup only) — no existing dependency covers
# writing; unitprep-core's `calamine` (used for parsing uploaded .xlsx
# files) is read-only.
rust_xlsxwriter = "0.96"

# Database access -- Postgres via Neon, connecting as the app_service
# role (see scripts/setup_app_service_role.sql and db.rs). tls-rustls
# is a pure-Rust TLS backend, avoiding an OpenSSL system dependency;
# Neon requires TLS regardless of which backend provides it. uuid,
# chrono, ipnetwork, and json enable the column-type mappings the auth
# schema actually uses (UUID PKs, TIMESTAMPTZ, INET, JSONB).
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "ipnetwork", "json"] }

# Loads .env.local into the process environment at startup (see
# main.rs) -- not required in a deployed environment, where real env
# vars are injected directly instead.
dotenvy = "0.15"

[dev-dependencies]

# Reads the xlsx exporter's own output back in its tests, so those
# tests verify real cell values/structure instead of just "some bytes
# came out". Same version already pinned in core/Cargo.toml.
calamine = "0.25"