[workspace]
members = ["core", "unit-group", "dedup"]
# This root Cargo.toml is both the workspace manifest and the
# `unitprep` binary's own package manifest — the binary crate stays at
# the repo root (unchanged import paths, unchanged build command) while
# `core` and `unit-group` are separate library crates it will depend on
# as the migration proceeds. See project docs / CHANGELOG for the
# rationale (shared engine for session storage + ingestion, reused by
# every UnitPrep tool, versus each tool's own domain logic kept in its
# own crate).

[package]
name = "unitprep"
version = "1.1.0"
edition = "2021"

authors = ["Boris Maksimov <bmaksimov@quikstor.com>"]

description = "Web API for storage facility unit group analysis, net-new group identification, and QMS import preparation."

license = "MIT OR Apache-2.0"

repository = "https://github.com/quikstorboris/unitPrep.git"

[dependencies]

# Shared engine: file ingestion/parsing (and, soon, session storage).
unitprep-core = { path = "core" }

# Duplicate-tenant-check domain logic (grouping/comparison/notes) — the
# binary owns only session/HTTP orchestration for this tool, same as
# UnitGroup's domain logic vs. its own orchestration here.
unitprep-dedup = { path = "dedup" }

# UnitGroup's own domain logic (discovery-result data, batch/fingerprint
# analysis, validation, corrections) — extracted out of src/domain/ into
# its own crate, same boundary as unitprep-dedup: this binary owns only
# session/HTTP orchestration for it.
unitprep-unit-group = { path = "unit-group" }

# Core error handling
anyhow = "1"

# CSV *writing* — infrastructure/csv_export.rs uses csv::Writer to build
# export output. Parsing/reading input CSVs lives entirely in
# unitprep-core now; this is a distinct, still-legitimate direct use.
csv = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time support
chrono = { version = "0.4", features = ["clock"] }

# Web framework
axum = { version = "0.8", features = ["multipart"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Middleware
tower-http = { version = "0.6", features = ["cors"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Session IDs
uuid = { version = "1", features = ["v4"] }

# ZIP export generation
zip = "2"

# XLSX export generation (dedup only) — no existing dependency covers
# writing; unitprep-core's `calamine` (used for parsing uploaded .xlsx
# files) is read-only.
rust_xlsxwriter = "0.96"

# Database access -- Postgres via Neon, connecting as the app_service
# role (see scripts/setup_app_service_role.sql and db.rs). tls-rustls
# is a pure-Rust TLS backend, avoiding an OpenSSL system dependency;
# Neon requires TLS regardless of which backend provides it. uuid,
# chrono, ipnetwork, and json enable the column-type mappings the auth
# schema actually uses (UUID PKs, TIMESTAMPTZ, INET, JSONB).
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "ipnetwork", "json"] }

# Loads .env.local into the process environment at startup (see
# main.rs) -- not required in a deployed environment, where real env
# vars are injected directly instead.
dotenvy = "0.15"

# Passkey/WebAuthn registration and authentication -- see src/auth.
# danger-allow-state-serialisation is needed because the ceremony
# state returned between the begin and finish steps of a registration
# or authentication must be persisted across two separate HTTP
# requests; without this feature those state types are not
# serializable at all. Pulls in an OpenSSL system dependency via its
# default-on attestation feature -- unrelated to sqlx's own tls-rustls
# choice above, just a second, independent dependency tree, needed
# for attestation certificate-chain verification.
webauthn-rs = { version = "0.5.5", features = ["danger-allow-state-serialisation"] }

# Used for AuthError (src/auth/mod.rs) -- ergonomic #[error(...)] derive
# rather than hand-writing Display impls.
thiserror = "2.0.19"

# Only used to construct the rp_origin Url the webauthn-rs builder
# requires (see WebauthnRsBackend::new) -- already in the dependency
# tree transitively, added explicitly since our own code references it
# directly.
url = "2.5.8"

# CookieJar extractor for the session cookie (src/auth/session_cookie.rs)
# -- deliberately the plain (unsigned, unencrypted) cookie feature only,
# not cookie-private/cookie-signed: the session token itself is opaque
# random data, verified via a database round-trip (resolve_session),
# not a claim we would ever trust from the cookie value directly, so
# there is nothing here worth encrypting or signing.
axum-extra = { version = "0.12.6", features = ["cookie"] }

# Hashes the raw session token before it is ever persisted (see
# sessions.token_hash) -- src/auth/session_token.rs.
sha2 = "0.11.0"

# Encodes the raw random session token into a cookie-safe string.
base64 = "0.22.1"

# Cookie max-age duration type, required by axum-extra's Cookie builder.
time = "0.3.54"

# Fills the raw session token's random bytes from the OS CSPRNG --
# lower-level than the rand crate and sufficient on its own for this
# one use (no need for rand's broader RNG abstraction just to fill a
# byte buffer).
getrandom = { version = "0.4.3", features = ["std"] }

[dev-dependencies]

# Reads the xlsx exporter's own output back in its tests, so those
# tests verify real cell values/structure instead of just "some bytes
# came out". Same version already pinned in core/Cargo.toml.
calamine = "0.25"
